# research-test-code-for-ALDVGPS

./: LICENSE  README.md  artifact_description.md  pyproject.toml  requirements.txt
configs/: parameter_tracks.json
results/: bench_full.csv  formal_campaign_manifest.json  smoke_real_audit_summary.csv  smoke_report.md
results/shards/: bench_GPV-L_n1.csv  bench_GPV-L_n16.csv  bench_GPV-L_n2.csv  bench_GPV-L_n4.csv  bench_GPV-L_n8.csv  bench_GPV-M_n1.csv  bench_GPV-M_n16.csv  bench_GPV-M_n2.csv  bench_GPV-M_n4.csv  bench_GPV-M_n8.csv  bench_GPV-S_n1.csv  bench_GPV-S_n16.csv  bench_GPV-S_n2.csv  bench_GPV-S_n4.csv  bench_GPV-S_n8.csv
scripts/: build_report.py  run_bench.py  run_distribution.py  run_flow.py  run_formal_campaign.py
src/dvgrpsig/: __init__.py  campaign.py  cli.py  config.py  experiment_io.py  experiments.py  pipeline.py  plots.py  protocol.py  receipt_audit.py  report_builder.py  reporting.py  serialization.py  types.py  utils.py
tests/: test_campaign.py  test_cli.py  test_core_protocol.py  test_experiment_filters.py  test_experiment_io.py  test_experiments.py  test_pipeline.py  test_report_builder.py
